--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "@vscode/test-electron": "^2.5.2",
     "eslint": "^9.36.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "shiki": "^3.14.0"
   }
 }
