feat: Add Icon Light And Dark Mode

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "commands": [
       {
         "command": "vscode-telescope.telescope",
-        "title": "Telescope"
+        "title": "Telescope: Open Telescope Panel"
       }
     ]
   },
